Improve home page, add skills. Add Yelp Camp link to personal project page

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -4,3 +4,15 @@ body {
 	background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+
+.rborder {
+	border-right: 1px solid rgb(0,0,0)
+}
+
+.rborder ul{
+	list-style: none
+}
+
+.black-link {
+	color: inherit
+}
