--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,5 +4,54 @@
 <h1 class = "text-center mt-5">
 	Jimmy Ouyang Personal Portfolio
 </h1>
+<h4 class = "text-center mt-2 mb-5">
+	Junhano@uci.edu<a class = "nav-link black-link" href = "https://github.com/Junhano?tab=repositories">Github Page</a>
+</h4>
+<div class = "container-fluid">
+	<div class= "row">
+		<div class="col-md-3 align-items-center text-center bd-sidebar rborder">
+			<h3><strong><em>Education</em></strong></h3>
+			<ul>
+				<li><strong>University of California Irvine</strong></li>
+				<li>B.S in Computer Science</li>
+				<li>B.A in Economic</li>
+		
+			</ul>
+			<h3><strong><em>Skills</em></strong></h3>
+			<ul>
+				<li><strong>Coding Language</strong></li>
+				<li>C++</li>
+				<li>Python</li>
+				<li>JavaScript</li>
+				
+				<li><strong>Comfortable field</strong></li>
+				<li>Web Development</li>
+				<li>Machine Learning and deep learning</li>
+				<li>Apache Spark</li>
+				<li>Big data and cloud computing</li>
+			</ul>
+			<h3><strong><em>Language</em></strong></h3>
+			<ul>
+				<li>Mandarin</li>
+				<li>English</li>
+			</ul>
+			<h3><strong><em>Extracurricular</em></strong></h3>
+			<ul>
+				<li>Violin</li>
+				<li>Basketball</li>
+				<li>Soccer</li>
+			</ul>
+		</div>
+		
+		<div class = "col-md-7">
+			<p>
+				Hello everyone. Welcome to my personal portfolio website. This website will be the place where I post my personal project so in the future I can look back and play around with it. The main theme of this project will be AI, since I am really interesting in the AI topic. However I will also post some website I build because I also have web developing skills. 
+			</p>
+		</div>
+		
+	</div>
+	
+</div>
+
 
 <%- include ('partials/footer.ejs') %>
