--- a/views/personalproject.ejs
+++ b/views/personalproject.ejs
@@ -1,8 +1,18 @@
 <%- include ('partials/header.ejs') %>
 
 
-<h1 class = "text-center mt-5">
+<h1 class = "text-center my-5">
 	Jimmy Ouyang Personal Project
 </h1>
+
+<div class = "container">
+	<div class="list-group text-center">
+	  <a href="https://powerful-mesa-56813.herokuapp.com/" class="list-group-item list-group-item-action list-group-item-dark">
+		Yelp Camp
+	  </a>
+
+	</div>
+</div>
+
 
 <%- include ('partials/footer.ejs') %>
