format the skill list and home page. Also make personal project link page look nicer

--- a/views/personalproject.ejs
+++ b/views/personalproject.ejs
@@ -6,12 +6,19 @@
 </h1>
 
 <div class = "container">
-	<div class="list-group text-center">
-	  <a href="https://powerful-mesa-56813.herokuapp.com/" class="list-group-item list-group-item-action list-group-item-dark">
-		Yelp Camp
-	  </a>
+	<div class = "row justify-content-center">
+		<div class = "col-md-4">
+			<div class="list-group text-center">
+			  <a href="https://powerful-mesa-56813.herokuapp.com/" class="list-group-item list-group-item-action bg-transparent">
+				Yelp Camp
+			  </a>
 
+			</div>
+
+		</div>		
 	</div>
+
+
 </div>
 
 
