--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 </h4>
 <div class = "container-fluid">
 	<div class= "row">
-		<div class="col-md-3 align-items-center text-center bd-sidebar rborder">
+		<div class="col-md-3 align-items-center text-left bd-sidebar rborder">
 			<h3><strong><em>Education</em></strong></h3>
 			<ul>
 				<li><strong>University of California Irvine</strong></li>
@@ -44,9 +44,15 @@
 		</div>
 		
 		<div class = "col-md-7">
-			<p>
-				Hello everyone. Welcome to my personal portfolio website. This website will be the place where I post my personal project so in the future I can look back and play around with it. The main theme of this project will be AI, since I am really interesting in the AI topic. However I will also post some website I build because I also have web developing skills. 
-			</p>
+			<div class = "row justify-content-center">
+				<div class="col-md-8">
+					<p>
+						Hello everyone. Welcome to my personal portfolio website. This website will be the place where I post my personal project so in the future I can look back and play around with it. The main theme of this project will be AI, since I am really interesting in the AI topic. However I will also post some website I build because I also have web developing skills. 
+					</p>					
+				</div>
+				
+			</div>
+
 		</div>
 		
 	</div>
