Put my first javascript game into the website

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,5 +4,10 @@
 <h1 class = "text-center mt-5">
 	Jimmy Ouyang Game Page
 </h1>
+<div class = "container center-c">
+	<div id = "ball">	
+	</div>	
+</div>
+
 
 <%- include ('partials/footer.ejs') %>
