Separate different game view page, fix some code and view format

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,9 +4,21 @@
 <h1 class = "text-center mt-5">
 	Jimmy Ouyang Game Page
 </h1>
-<div class = "container center-c">
-	<div id = "ball">	
-	</div>	
+
+<div class = "container">
+	<div class = "row justify-content-center">
+		<div class = "col-md-4">
+			<div class="list-group text-center">
+			  <a href="/game/ball" class="list-group-item list-group-item-action bg-transparent">
+				Ball Game
+			  </a>
+
+			</div>
+
+		</div>		
+	</div>
+
+
 </div>
 
 
