--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+
 		<script src="/script/ballgame.js"></script>
 		<link rel= "stylesheet" href = "/stylesheets/home.css">
 		<title>Jimmy Ouyang Personal Portfolio</title>
