--- a/views/game.ejs
+++ b/views/game.ejs
@@ -6,19 +6,19 @@
 </h1>
 
 <div class = "container">
-	<div class = "row justify-content-center">
-		<div class = "col-md-4">
-			<div class="list-group text-center">
-			  <a href="/game/ball" class="list-group-item list-group-item-action bg-transparent">
-				Ball Game
-			  </a>
-
+	<div class = "container">
+		<div class = "card">
+			<img class = "card-img-top" src= "https://proxy-us-west2.goorm.io//service/5f0e82f4fc5f52a1761ee434_dl1jzFCNBm83FhQ4H1A.run-us-west2.goorm.io/9080//file/load/BallGame.jpeg?path=d29ya3NwYWNlJTJGd2RiJTJGcGVyc29uYWxXZWIlMkZwaWN0dXJlcyUyRkJhbGxHYW1lLmpwZWc=&docker_id=dl1jzFCNBm83FhQ4H1A&secure_session_id=NtNi9Z_wrcU3gY2FzZ7tQ1kh2tSn_zNk" alt = "Card image cap">
+			<div class = "card-body">
+				<h5 class = "card-text">
+					<a href="/game/ball">
+						Ball Game
+					</a>
+				</h5>
 			</div>
+		</div>
 
-		</div>		
 	</div>
-
-
 </div>
 
 
