--- a/views/personalproject.ejs
+++ b/views/personalproject.ejs
@@ -26,7 +26,7 @@
 	</h4>
 	<div class = "template-container">
 		<div>
-			<a href = "/yoga/home"><img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTBCZwkfHCZE9LmY03vM0coBPKydpLQ-TAtRQ&usqp=CAU"></a>
+			<a href = "/yoga/home"><img src = "https://proxy-us-west2.goorm.io//service/5f0e82f4fc5f52a1761ee434_dl1jzFCNBm83FhQ4H1A.run-us-west2.goorm.io/9080//file/load/yoga.jpeg?path=d29ya3NwYWNlJTJGd2RiJTJGcGVyc29uYWxXZWIlMkZwaWN0dXJlcyUyRnlvZ2EuanBlZw==&docker_id=dl1jzFCNBm83FhQ4H1A&secure_session_id=sYdtkvVgeV5T2hv6FbVNRfVoEdrNJQPB"></a>
 		</div>
 		<div>
 			
