--- a/views/website-template/partials/yogafooter.ejs
+++ b/views/website-template/partials/yogafooter.ejs
@@ -1,6 +1,6 @@
 	</div>
-	<div class = "width-third">
-		<div class = "half-size" id = "text-white">
+	<div class = "footer">
+		<div class = "copyright">
 			<h2>
 			123 St. City Location, Country | 987654321	
 			</h2>
@@ -8,7 +8,7 @@
 				© 2023 by Belle Carrie Rehabilitation Yoga. All rights reserved.
 			</h3>	
 		</div>
-		<div class = "thirty">
+		<div class = "icon">
 			<i class="fab fa-facebook-f"></i>
 			<i class="fab fa-twitter"></i>
 			<i class="fab fa-google-plus-g"></i>
