--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -32,7 +32,7 @@ body {
 }
 
 .template-container div a img{
-	height: auto;
-	width: 100%;
-	display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
