--- a/views/website-template/yoga/blog.ejs
+++ b/views/website-template/yoga/blog.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/yogaheader.ejs') %>
+<div class = "inner">
 	<h1 class = "iheader">
 		Blog	
 	</h1>
@@ -41,4 +42,5 @@
 			</p>
 		</div>
 	</div>
+</div>
 <%- include('../partials/yogafooter.ejs') %>
