--- a/views/website-template/partials/yogaheader.ejs
+++ b/views/website-template/partials/yogaheader.ejs
@@ -30,10 +30,14 @@
 		<ul>
 			<li><a href = "/yoga/home">HOME</a></li>
 			<li><a href = "/yoga/about">ABOUT</a></li>
-			<li><a href = '/yoga/class'>CLASS</a></li>
+			<li class = "activate" >
+				<a href = '/yoga/class'>CLASS</a>
+				<div class = "dropdown-content">
+					<a href = '/yoga/instructors'>INSTRUCTORS</a>
+				</div>
+			</li>
 			<li><a href = '/yoga/contact'>CONTACT</a></li>
 			<li><a href = '/yoga/blog'>BLOG</a></li>
-			<li class = "hidden"><a href = '/yoga/instructors'>INSTRUCTOR</a></li>
 		</ul>
 	</div>
 	<div class = "white-box">
