--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 	Jimmy Ouyang Personal Portfolio
 </h1>
 <h4 class = "text-center mt-2 mb-5">
-	Junhano@uci.edu<a class = "nav-link black-link" href = "https://github.com/Junhano?tab=repositories">Github Page</a>
+	Junhano@uci.edu<a class = "nav-link black-link s-link" href = "https://github.com/Junhano?tab=repositories">Github Page</a>
 </h4>
 <div class = "container-fluid">
 	<div class= "row">
