--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,8 +27,12 @@
 				  </li>
 				</ul>
 				<span class="navbar-text">
+				  <a class="nav-link" href="/business">Business</a>
+				</span>
+				<span class="navbar-text">
 				  <a class="nav-link" href="/pproject">Personal Project</a>
 				</span>
+
 			 </div>
 		</nav>
 		
